gitops/apps/paas-api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paas-api
  namespace: paas-api
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: paas-api
  template:
    metadata:
      labels:
        app: paas-api
    spec:
      serviceAccountName: paas-api-sa
      imagePullSecrets:
        - name: scr-pull
      securityContext:
        runAsNonRoot: true
      containers:
        - name: api
          image: registry.onstackit.cloud/scr-daniel/paas-api:f0ae4c2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          # bonus -> specify mins and max for hpa requests
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
