gitops/apps/paas-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paas-api
  namespace: paas-api
spec:
  type: ClusterIP
  selector:
    app: paas-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
