gitops/apps/paas-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-api
  namespace: paas-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api-daniel-paas.stackit.gg
      secretName: api-daniel-paas-tls
  rules:
    - host: api-daniel-paas.stackit.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paas-api
                port:
                  number: 80
